<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D9000000"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/operacao"
        android:layout_width="330dp"
        android:layout_height="31dp"
        android:background="#FFFFFF"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="#000000"
        android:textSize="20sp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.162"
        tools:visibility="visible" />

    <Button
        android:id="@+id/clear"
        android:layout_width="78dp"
        android:layout_height="81dp"
        android:text="@string/clear"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.918"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.306" />

    <Button
        android:id="@+id/igual"
        android:layout_width="78dp"
        android:layout_height="81dp"
        android:text="@string/igual"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.918"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.678" />

    <Button
        android:id="@+id/menos"
        android:layout_width="78dp"
        android:layout_height="81dp"
        android:text="@string/menos"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.918"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.554" />

    <Button
        android:id="@+id/mais"
        android:layout_width="78dp"
        android:layout_height="81dp"
        android:text="@string/mais"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.918"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.430" />

    <Button
        android:id="@+id/zero"
        android:layout_width="78dp"
        android:layout_height="81dp"
        android:text="@string/zero"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.364"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.678" />

    <Button
        android:id="@+id/nove"
        android:layout_width="78dp"
        android:layout_height="81dp"
        android:text="@string/nove"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.641"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.306" />

    <Button
        android:id="@+id/oito"
        android:layout_width="78dp"
        android:layout_height="81dp"
        android:text="@string/oito"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.364"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.306" />

    <Button
        android:id="@+id/sete"
        android:layout_width="78dp"
        android:layout_height="81dp"
        android:text="@string/sete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.087"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.306" />

    <Button
        android:id="@+id/seis"
        android:layout_width="78dp"
        android:layout_height="81dp"
        android:text="@string/seis"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.641"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.430" />

    <Button
        android:id="@+id/cinco"
        android:layout_width="78dp"
        android:layout_height="81dp"
        android:text="@string/cinco"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.364"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.430" />

    <Button
        android:id="@+id/quatro"
        android:layout_width="78dp"
        android:layout_height="81dp"
        android:text="@string/quatro"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.087"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.430" />

    <Button
        android:id="@+id/um"
        android:layout_width="78dp"
        android:layout_height="81dp"
        android:text="@string/um"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.087"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.554" />

    <Button
        android:id="@+id/dois"
        android:layout_width="78dp"
        android:layout_height="81dp"
        android:text="@string/dois"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.364"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.554" />

    <Button
        android:id="@+id/tres"
        android:layout_width="78dp"
        android:layout_height="81dp"
        android:text="@string/tres"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.641"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.554" />

    <TextView
        android:id="@+id/numatual"
        android:layout_width="337dp"
        android:layout_height="50dp"
        android:background="#FFFFFF"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="#000000"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.078"
        tools:visibility="visible" />
</androidx.constraintlayout.widget.ConstraintLayout>